# meetingsdk-linux-raw-recording-sample

Dockerfile-Ubuntu/: .dockerignore  Dockerfile
demo/: CMakeLists.txt  KafkaProducer.cpp  KafkaProducer.h  ZoomSDKAudioRawData.cpp  ZoomSDKAudioRawData.h  meeting_sdk_demo.cpp  script.txt
